--- a/styles.css
+++ b/styles.css
@@ -8,3 +8,11 @@
     height: 70px;
     
 }
+.navbar ul{
+    display: flex;
+    list-style: none;
+    margin: 30px 0px;
+    text-align: right;
+
+
+}
