--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,14 @@
 
 
 }
+.navbar ul li{
+    font-family: century;
+    font-size: 1,1rem;
+    font-weight:bold ;
+}
+.navbar ul li a{
+    text-decoration: none;
+    color: black;
+    padding: 15px 40px;
+    transition: all ,5s;
+}
