--- a/styles.css
+++ b/styles.css
@@ -1,26 +1,31 @@
 
-
-@import url("https://fonts.googleapis.com/css?family=Arimo:400|Raleway:300,400,700&display=swap");
-body {
-  font-family: "Raleway", sans-serif;
-  color: #fff;
-  font-size: 16px;
-  line-height: 30px;
-  font-weight: 300;
-  position: relative;
+*,*::after, *::before{
+    margin: 0px;
+    padding: 0px;
+}
+body{
+    background-color: #E5E5E5;
+    margin: 0px;
+    box-sizing: border-box;
+    
+}
+.navbar{
+    width: 90%;
+    margin:0px auto;
 }
 
-.navbar{
+
+nav{
     display: flex;
     justify-content: center;
-    align-items: left;
+    align-items: center;
     background-color:white;
     position: sticky;
     top: 0;
     height: 70px;
     
 }
-.navbar ul{
+nav ul{
     display: flex;
     list-style: none;
     margin: 30px 0px;
@@ -28,22 +33,62 @@ body {
 
 
 }
-.navbar ul li{
+nav ul li{
     font-family: century;
     font-size: 1,1rem;
     font-weight:bold ;
 }
-.navbar ul li a{
+nav ul li a{
     text-decoration: none;
-    color:black;
+    color:grey;
     padding: 15px 40px;
     transition: all ;
     letter-spacing: 1px;
     cursor: pointer;
     text-transform: uppercase;
 }
-.navbar ul li a:hover{
+nav ul li a:hover{
    
     color:red;
     
 }
+
+.content{
+   background-color: black;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 100%;
+    height: 80vh;
+    
+   
+}
+
+
+
+.content h3{
+    font-family: sans-serif;
+    margin-bottom: 18px;
+    color:blue;
+    font-size: 20px;
+    font-weight: normal;
+    text-align: left;
+
+}
+.content h1{
+    margin-bottom: 10px;
+    letter-spacing: 1px;
+    font-size: 50px;
+    text-transform: uppercase;
+    font-family: sans-serif;
+    color: chartreuse;
+    text-align: left;
+
+}
+.content p{
+    font-family: sans-serif;
+    font-size: 22px;
+    color:green;
+    letter-spacing: 1px;
+    text-align: left;
+}     
