--- a/styles.css
+++ b/styles.css
@@ -53,7 +53,7 @@ nav ul li a:hover{
     
 }
 
-/* .content{
+ .content{
    background-color: black;
     background-size: cover;
     background-repeat: no-repeat;
@@ -91,4 +91,4 @@ nav ul li a:hover{
     color:green;
     letter-spacing: 1px;
     text-align: left;
-}      */
+}      
