--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
     margin: 0px;
     padding: 0px;
 }
+
 body{
     background-color: #E5E5E5;
     margin: 0px;
@@ -54,7 +55,7 @@ nav ul li a:hover{
 }
 
  .content{
-   background-color: black;
+   background-image: url("images/comp.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -65,30 +66,221 @@ nav ul li a:hover{
 }
 
 
-
-.content h3{
-    font-family: sans-serif;
-    margin-bottom: 18px;
-    color:blue;
-    font-size: 20px;
-    font-weight: normal;
-    text-align: left;
-
-}
-.content h1{
-    margin-bottom: 10px;
-    letter-spacing: 1px;
-    font-size: 50px;
-    text-transform: uppercase;
-    font-family: sans-serif;
-    color: chartreuse;
-    text-align: left;
-
-}
 .content p{
     font-family: sans-serif;
     font-size: 22px;
-    color:green;
+    color:black;
     letter-spacing: 1px;
-    text-align: left;
+    text-align: right;
+    padding-top: 350px;
+    text-transform: uppercase;
+    
+}
+.contact-form-btn{
+    float:right ;
+    text-transform: uppercase;
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
 }      
+
+.fa {
+    padding: 20px;
+    font-size: 25px;
+    width: 50px;
+    text-align: center;
+    text-decoration: none;
+    color: black;
+    display: inline;
+    padding: 40px;
+    margin-top: 15px;
+  
+  }
+  
+  
+  .fa:hover {
+    color: blue;
+  }
+  .footer{
+    
+    text-align: center;
+    padding-bottom: 5px;
+    box-sizing: border-box;
+    background-color: honeydew;
+    color: orange;
+    margin-top: 0.1%;
+   
+  }
+  .footer p{
+  margin-bottom: 20px;
+  }
+  .imagep h2{
+      padding-top: 30px;
+      text-align: center;
+      text-transform: uppercase;
+  } 
+  .imagep{
+    background-color: honeydew;
+     background-size: cover;
+     background-repeat: no-repeat;
+     background-position: center;
+     width: 100%;
+     height: 600vh;
+     
+    
+ }
+
+  .imagep{
+    width: 100vw;
+    height: 30vh;
+    background-color:grey;
+    background-size: cover;
+}
+
+
+.abt{
+    background-color: white;
+    background-repeat: no-repeat;
+    background-size: cover;
+    padding: 20px;
+}
+
+#photo{
+    display: block;
+    border-radius: 50%;
+    margin-right: auto;
+    margin-left: auto;
+   
+
+}
+
+.about-cover{
+    background-color: grey;
+    opacity: 0.8;
+}
+
+.about{
+   
+    color: white;
+    margin: 30px 80px 50px 80px;
+    text-align: center;
+   
+}
+
+h1{
+    text-align: center;
+    margin-top: 10px;   
+}
+
+p{
+    font-family:  sans-serif;
+    font-weight: 300;
+    font-size: larger;
+    text-align: center;
+    margin: 10px 60px 30px 60px;
+}
+.projects{
+    border: 0px solid grey;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-color: black;
+   
+}
+
+.projects h1{
+    color: honeydew;
+}
+
+
+.article{
+    display: flex;
+    margin: 5px 10px 5px 10px;
+   
+ }
+
+ .spacing{
+    padding-left: 50px;
+}
+
+.spacing p{
+    margin: 20px;
+    color: whitesmoke;
+    font-size: medium;
+   
+}
+.about h1{
+    color: brown;
+}
+.Education h2{
+    color: brown;
+
+}
+.job h2{
+    color: brown;
+}
+.Hobbies h2{
+    color: brown;
+}
+.programming h2{
+    color: brown;
+}
+
+.contact-section{
+    background: grey;
+    background-size: cover;
+    padding: 40px 0;
+    color: black;
+    margin-top: 5%; margin-top: 2%; margin-left: 1%; margin-right: 1%;
+  }
+  
+  .contact-section h1{
+    text-align: center;
+    text-decoration-line: underline;
+  
+  }
+ /*  .border{
+    width: 150px;
+    height: 20px;
+    background: bisque;
+   
+  
+  } */
+  .contact-form{
+    max-width: 600px;
+    margin: auto;
+    padding: 0 10px;
+    overflow: hidden;
+  }
+  .contact-form-text{
+    display: block;
+    width: 100%;
+    box-sizing: border-box;
+    margin: 16px 0;
+    border: 0;
+    background-color: rgb(230, 230, 230);
+    color: black;
+    padding: 20px 40px;
+    outline: none;
+    transition: 0.5s;
+  }
+  .contact-form-text:hover{
+    background: none;
+    border: 2px solid black;
+  }
+  textarea.contact-form-text{
+    resize: none;
+    height: 120px;
+  }
+  .contact-form-btn{
+    float: right;
+    border: 0;
+    background: black;
+    color: white;
+    padding: 12px 50px;
+    border-radius: 20px;
+    cursor: pointer;
+  }
+  
+  .contact-form-btn:hover{
+    background: blue;
+  }
