--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ h1{
     margin-top: 10px;   
 }
 
-p{
+/* p{
     font-family:  sans-serif;
     font-weight: 300;
     font-size: larger;
@@ -238,13 +238,7 @@ p{
     text-decoration-line: underline;
   
   }
- /*  .border{
-    width: 150px;
-    height: 20px;
-    background: bisque;
-   
-  
-  } */
+
   .contact-form{
     max-width: 600px;
     margin: auto;
@@ -283,4 +277,4 @@ p{
   
   .contact-form-btn:hover{
     background: blue;
-  }
+  } */
