--- a/styles.css
+++ b/styles.css
@@ -172,7 +172,7 @@ h1{
     margin-top: 10px;   
 }
 
-/* p{
+ p{
     font-family:  sans-serif;
     font-weight: 300;
     font-size: larger;
@@ -225,7 +225,7 @@ h1{
     color: brown;
 }
 
-.contact-section{
+/* .contact-section{
     background: grey;
     background-size: cover;
     padding: 40px 0;
@@ -277,4 +277,4 @@ h1{
   
   .contact-form-btn:hover{
     background: blue;
-  } */
+  }  */
