Changed a background color of the contact section

--- a/styles.css
+++ b/styles.css
@@ -245,7 +245,7 @@ h1{
     padding: 0 10px;
     overflow: hidden;
   }
-  /*  .contact-form-text{
+   .contact-form-text{
     display: block;
     width: 100%;
     box-sizing: border-box;
@@ -261,7 +261,7 @@ h1{
     background: none;
     border: 2px solid black;
   }
-  textarea.contact-form-text{
+ /*  textarea.contact-form-text{
     resize: none;
     height: 120px;
   }
@@ -277,4 +277,4 @@ h1{
   
   .contact-form-btn:hover{
     background: blue;
-  }    */
+  }     */
